# Copyright © 2024 Mitch Burton
#
# This file is part of wesley.
#
# wesley is free software: you can redistribute it and/or modify it under the terms of
# the GNU General Public License as published by the Free Software Foundation, either
# version 3 of the License, or (at your option) any later version.
#
# wesley is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
# without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR
# PURPOSE. See the GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License along with wesley. If
# not, see <https://www.gnu.org/licenses/>.

[tool.poetry]
name = "wesley"
version = "0.1.0"
description = "A hungry, hungry black cat"
authors = ["Mitch Burton <mitch@mitchellburton.ca>"]
license = "GPLv3+"
readme = "README.md"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = ">=3.11"
Markdown = "^3.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
tox = "^4.12.1"
mypy = "^1.8.0"
ruff = "^0.2.1"
pytest-coverage = "^0.0"

[tool.poetry.scripts]
wesley = "wesley.cli:wesley"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
